[gd_scene load_steps=7 format=2]

[ext_resource path="res://obstacle.gd" type="Script" id=1]
[ext_resource path="res://laserShoot.wav" type="AudioStream" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.631373, 0, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="SphereMesh" id=4]

[node name="KinematicBody" type="KinematicBody" groups=["obstacle"]]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00146842, 0.00560749, -0.00268841 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0210153, 0.0120914, -0.0190072 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
debug_shape_custom_color = Color( 0.196078, 1, 0, 1 )
debug_shape_thickness = 5.0

[node name="RayCast2" type="RayCast" parent="."]
transform = Transform( 0.0256012, 0, -0.999672, 0, 1, 0, 0.999672, 0, 0.0256012, 0.0210153, 0.0120914, -0.0190072 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
debug_shape_custom_color = Color( 0.196078, 1, 0, 1 )
debug_shape_thickness = 5.0

[node name="RayCast3" type="RayCast" parent="."]
transform = Transform( -0.999369, 0, 0.0355274, 0, 1, 0, -0.0355274, 0, -0.999369, 0.0210153, 0.0120914, -0.0190072 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
debug_shape_custom_color = Color( 0.196078, 1, 0, 1 )
debug_shape_thickness = 5.0

[node name="RayCast4" type="RayCast" parent="."]
transform = Transform( 0.00616103, 0, 0.999981, 0, 1, 0, -0.999981, 0, 0.00616103, 0.0210153, 0.0120914, -0.0190072 )
enabled = true
cast_to = Vector3( 0, 0, -1 )
debug_shape_custom_color = Color( 0.196078, 1, 0, 1 )
debug_shape_thickness = 5.0

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.359757, 0, 0, 0, 0.42717, 0, 0, 0, 0.639994, -0.391428, 0.336074, 0.672951 )
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 0.359757, 0, 0, 0, 0.42717, 0, 0, 0, 0.639994, 0.425778, 0.336074, 0.672951 )
mesh = SubResource( 4 )
material/0 = null

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 18.407

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
